--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -894,6 +894,7 @@
       "description": "Review or edit your cluster configuration and create your cluster.",
       "configuration": {
         "title": "Cluster configuration",
+        "description": "Check/edit the yaml file that is used to create the cluster",
         "pending": "{{action}} request pending...",
         "forceUpdate": "Force update: Edit the cluster while the compute fleet is still running.",
         "disableRollback": "Disable rollback: Retain the cluster resources in case of a cluster create failure."
