Add global propertyFilter i18nStrings

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -42,6 +42,34 @@
       "openButtonAriaLabel": "Open panel",
       "resizeHandleAriaLabel": "Resize split panel"
     },
+    "propertyFilter": {
+      "filteringAriaLabel": "your choice",
+      "dismissAriaLabel": "Dismiss",
+      "filteringPlaceholder": "Filter distributions by text, property or value",
+      "groupValuesText": "Values",
+      "groupPropertiesText": "Properties",
+      "operatorsText": "Operators",
+      "operationAndText": "and",
+      "operationOrText": "or",
+      "operatorLessText": "Less than",
+      "operatorLessOrEqualText": "Less than or equal",
+      "operatorGreaterText": "Greater than",
+      "operatorGreaterOrEqualText": "Greater than or equal",
+      "operatorContainsText": "Contains",
+      "operatorDoesNotContainText": "Does not contain",
+      "operatorEqualsText": "Equals",
+      "operatorDoesNotEqualText": "Does not equal",
+      "editTokenHeader": "Edit filter",
+      "propertyText": "Property",
+      "operatorText": "Operator",
+      "valueText": "Value",
+      "cancelActionText": "Cancel",
+      "applyActionText": "Apply",
+      "allPropertiesLabel": "All properties",
+      "clearFiltersText": "Clear filters",
+      "removeTokenButtonAriaLabel": "Remove token {{propertyKey}} {{operator}} {{value}}",
+      "enteredTextLabel": "Use: '{{text}}'"
+    },
     "loading": "Loading..."
   },
   "errorBoundary": {
