Add temporary InfoPanel to Logs page

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -333,6 +333,10 @@
   "clusterLogs": {
     "title": "{{clusterName}} cluster logs",
     "breadcrumbLabel": "Logs",
+    "helpPanel": {
+      "title": "Cluster logs",
+      "description": "Browser the logs of your cluster."
+    },
     "logStreams": {
       "title": "Log streams",
       "columns": {
