Add missing i18n strings for region validation

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -344,6 +344,7 @@
       },
       "validation": {
         "VpcSelect": "You must select a VPC.",
+        "regionSelect": "You must select a region.",
         "customAmiSelect": "You must select an AMI ID if you add a custom AMI."
       },
       "clusterName": {
@@ -357,7 +358,8 @@
       "region": {
         "label": "Region",
         "description": "The AWS Region for the cluster.",
-        "selectedAriaLabel": "Selected"
+        "selectedAriaLabel": "Selected",
+        "placeholder": "Select a region"
       },
       "os": {
         "label": "Operating system",
