--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -42,6 +42,33 @@
       "openButtonAriaLabel": "Open panel",
       "resizeHandleAriaLabel": "Resize split panel"
     },
+    "propertyFilter": {
+      "filteringAriaLabel": "your choice",
+      "dismissAriaLabel": "Dismiss",
+      "groupValuesText": "Values",
+      "groupPropertiesText": "Properties",
+      "operatorsText": "Operators",
+      "operationAndText": "and",
+      "operationOrText": "or",
+      "operatorLessText": "Less than",
+      "operatorLessOrEqualText": "Less than or equal",
+      "operatorGreaterText": "Greater than",
+      "operatorGreaterOrEqualText": "Greater than or equal",
+      "operatorContainsText": "Contains",
+      "operatorDoesNotContainText": "Does not contain",
+      "operatorEqualsText": "Equals",
+      "operatorDoesNotEqualText": "Does not equal",
+      "editTokenHeader": "Edit filter",
+      "propertyText": "Property",
+      "operatorText": "Operator",
+      "valueText": "Value",
+      "cancelActionText": "Cancel",
+      "applyActionText": "Apply",
+      "allPropertiesLabel": "All properties",
+      "clearFiltersText": "Clear filters",
+      "removeTokenButtonAriaLabel": "Remove token {{propertyKey}} {{operator}} {{value}}",
+      "enteredTextLabel": "Use: '{{text}}'"
+    },
     "loading": "Loading..."
   },
   "errorBoundary": {
@@ -301,6 +328,45 @@
         "empty": "No cluster available"
       },
       "closeAriaLabel": "Close"
+    }
+  },
+  "clusterLogs": {
+    "title": "{{clusterName}} cluster logs",
+    "breadcrumbLabel": "Logs",
+    "helpPanel": {
+      "title": "Cluster logs",
+      "description": "Browse the logs of your cluster."
+    },
+    "logStreams": {
+      "title": "Log streams",
+      "columns": {
+        "hostname": "Hostname",
+        "nodeType": "Type",
+        "logIdentifier": "Log identifier",
+        "timestamp": "Last event time"
+      },
+      "nodeType": {
+        "headNode": "Headnode",
+        "computeNode": "Compute node",
+        "empty": "-"
+      },
+      "loadingText": "Loading log streams...",
+      "filtering": {
+        "countText": "Results: {{filteredItemsCount}}",
+        "filteringPlaceholder": "Filter log streams",
+        "empty": {
+          "title": "No log streams",
+          "subtitle": "No log streams to display."
+        },
+        "noMatch": {
+          "title": "No matches",
+          "subtitle": "No log stream matches the filters.",
+          "resetFilter": "Clear filter"
+        }
+      },
+      "actions": {
+        "refresh": "Refresh"
+      }
     }
   },
   "wizard": {
