Remove refresh icon from refresh buttons

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -178,9 +178,14 @@
       }
     },
     "stackEvents": {
+      "title": "Events",
       "filter": {
         "filteringPlaceholder": "Find stack events",
         "filteringAriaLabel": "Find stack events"
+      },
+      "actions": {
+        "refresh": "Refresh",
+        "view": "View in CloudFormation"
       }
     },
     "accounting": {
