Remove Logs tab

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -107,8 +107,7 @@
       "storage": "Storage",
       "scheduling": "Job scheduling",
       "accounting": "Accounting",
-      "stackEvents": "Stack events",
-      "logs": "Logs"
+      "stackEvents": "Stack events"
     },
     "properties": {
       "sshcommand": {
