Remove Logs button from Instances tab

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -141,8 +141,7 @@
       "actionsLabel": "Actions",
       "actions": {
         "stop": "Stop",
-        "start": "Start",
-        "logs": "Logs"
+        "start": "Start"
       },
       "loadingText": "Loading instances...",
       "filtering": {
