--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -269,7 +269,8 @@
         "delete": "Delete cluster",
         "shell": "Shell",
         "filesystem": "File system",
-        "dcv": "DCV"
+        "dcv": "DCV",
+        "logs": "View logs"
       },
       "actionsLabel": "Actions",
       "filtering": {
