Add View logs button to reach Cluster Logs page (#130)
* Remove Logs tab

* Remove Logs button from Instances tab

* Add View logs button to actions dropdown in Clusters page

* Add e2e utils for clusters page

* Add e2e utils for logs page

* Add e2e spec for the cluster logs page

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -107,8 +107,7 @@
       "storage": "Storage",
       "scheduling": "Job scheduling",
       "accounting": "Accounting",
-      "stackEvents": "Stack events",
-      "logs": "Logs"
+      "stackEvents": "Stack events"
     },
     "properties": {
       "sshcommand": {
@@ -142,8 +141,7 @@
       "actionsLabel": "Actions",
       "actions": {
         "stop": "Stop",
-        "start": "Start",
-        "logs": "Logs"
+        "start": "Start"
       },
       "loadingText": "Loading instances...",
       "filtering": {
@@ -271,7 +269,8 @@
         "delete": "Delete cluster",
         "shell": "Shell",
         "filesystem": "File system",
-        "dcv": "DCV"
+        "dcv": "DCV",
+        "logs": "View logs"
       },
       "actionsLabel": "Actions",
       "filtering": {
