--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -957,7 +957,7 @@
         "instanceType": {
           "label": "Instance type",
           "placeholder": {
-            "multiple": "Select one or more instance type"
+            "multiple": "Select one or more instance types"
           }
         },
         "disableHT": {
@@ -988,7 +988,7 @@
       },
       "name": {
         "label": "Queue name",
-        "placeholder": "queue-name"
+        "placeholder": "Enter the queue name"
       },
       "subnet": {
         "label": {
