Adjust layout of action editor

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1096,8 +1096,8 @@
         },
         "addArgument": "Add argument",
         "argument": {
-          "label": "Argument",
-          "placeholder": "argument"
+          "label": "Arguments",
+          "placeholder": "Argument"
         }
       }
     }
