Use Create button to show image build request loading status

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1288,8 +1288,7 @@
         "build": "Build image",
         "imageIdLabel":"Image ID",
         "imageIdPlaceholder":"Enter image AMI ID",
-        "imageIdError":"Image ID must not be blank",
-        "loading": "Image Build request pending"
+        "imageIdError":"Image ID must not be blank"
       }
     }
   },
