--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -491,6 +491,15 @@
         "description": "The VPC for the cluster instances.",
         "selectedAriaLabel": "Selected"
       },
+      "imdsSupport": {
+        "label": "IMDS support",
+        "description": "The IMDS versions that are supported in the cluster nodes.",
+        "placeholder": "Select an IMDS version",
+        "values": {
+          "version10": "Version 1.0",
+          "version20": "Version 2.0"
+        }
+      },
       "multiUser": {
         "title": "Multiple user management properties",
         "description": "Configure Active Directory access settings for multiple users on a cluster.",
