Extract hardcoded label

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1009,6 +1009,7 @@
         "enableEfa": "Use EFA"
       },
       "advancedOptions": {
+        "label": "Advanced options",
         "iamPolicies": {
           "label": "IAM Policies"
         },
