--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1081,7 +1081,8 @@
         "forceUpdate": "Force update: Edit the cluster while the compute fleet is still running."
       },
       "flashBar": {
-        "success": "Success"
+        "success": "Success",
+        "error": "Error"
       },
       "helpPanel": {
         "title": "Cluster configuration",
